[tool.poetry]
name = "leocli"
version = "3.3.0"
description = "A console translation script for https://dict.leo.org"
authors = ["sedrubal <dev@sedrubal.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
argparse = "^1.4.0"
argcomplete = "^1.11.1"
lxml = "^4.5.1"
tabulate = "^0.8.7"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"

[tool.poetry.scripts]
leo = 'leocli.leo:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
